maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: not found: value getWorldWith
 for (i <- 0 to getWorldWith() - 1){
                ^